<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/inputWeightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cal_Input"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/weightInputTextBox"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight=".05"
                android:ems="10"
                android:hint="@string/set_hint"
                android:inputType="numberDecimal"
                android:singleLine="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:id="@+id/paddingLayout">""</LinearLayout>

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/cal_clear"
                android:width="64dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/maxWeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:text="@string/cal_max"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/selectUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/selectUnitsTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/cal_selectUnits"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF0000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unitGramsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cal_grams"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical|right" />

            <CheckBox
                android:id="@+id/gramsCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical|center_horizontal"
                android:width="60dp" />

            <TextView
                android:id="@+id/unitOuncesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cal_ounces"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical|right" />

            <CheckBox
                android:id="@+id/ouncesCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
